...
    <string name="tab_lists">Списки пользователей</string>
    <string name="tab_groups">Группы</string>
    <string name="tab_administrators">Родительские устройства</string>
    <string name="tab_wifi">Wi-Fi</string>
    <string name="tab_logs">Журнал</string>
    <string name="tab_all_devices">Все устройства</string>
    <string name="tab_allowlist">Белый список</string>
    <string name="tab_blocklist">Чёрный список</string>
    <string name="tab_schedule">Расписания</string>
    <string name="tab_info">Информация</string>
    <string name="tab_settings">Настройки</string>

    <string name="devices_title">Устройства в сети</string>
    <string name="devices_empty">Роутер не вернул зарегистрированных устройств.</string>
...
    <string name="device_unblock">Разблокировать</string>
    <string name="device_status_online">В сети</string>
    <string name="device_status_offline">Не в сети</string>
    <string name="device_status_blocked">Заблокировано</string>
    <string name="device_status_format">Статус: %1$s</string>
    <string name="device_ip_format">IP: %1$s</string>
    <string name="device_mac_format">MAC: %1$s</string>
    <string name="device_group_format">Группа: %1$s</string>
    <string name="device_type_format">Тип: %1$s</string>
    <string name="device_edit_title">Настройки устройства #%1$s</string>
    <string name="device_name_label">Имя устройства</string>
    <string name="device_group_label">Группа</string>
    <string name="device_group_unconfigured">Не настроено</string>
...
